--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SampleApp</title>
+  <title>Ruby on Rails Tutorial Sample App | <%= yield(:title) %></title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+
+<ul>
+    <li><a href='/static_pages/home'>Home</a></li>
+    <li><a href='/static_pages/about'>About</a></li>
+    <li><a href='/static_pages/help'>Help</a></li>
+</ul>
 
 <%= yield %>
 
