Borked testing via Spork. Thanks Spork

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 
 <ul>
     <li><a href='/static_pages/home'>Home</a></li>
+    <li><a href='/static_pages/news'>News</a></li>
     <li><a href='/static_pages/about'>About</a></li>
     <li><a href='/static_pages/help'>Help</a></li>
 </ul>
